# bitcoin-news-mining

./: .gitignore  Kuba_notes.md  README.md  app.py  app2.py  db.py  judge_test.py  main.py  mongod.conf  parsed_events.csv  pyproject.toml  ranking_events.py  raw_search_results.csv  sourcing_events.py
archive/: db_manager.py  final.py  openai_intro.py  tavily_advanced.py  tavily_basic.py
data_processed/: bitcoin_history.csv  bitcoin_history_January 3, 2009.csv  bitcoin_top_events_2013-06-01_to_2013-06-30.csv
data_raw/: exa_results.json  tavily_results.json
examples/: batch_processing.py  db_connection_test.py  db_usage_example.py  query_comparison.py  ranking_example.py  single_date.py  structured_output_example.py
logs/: mongodb.log.2025-03-02T20-31-32
scripts/: evaluate_results.py  exa_search.py  exa_walkthrough.py  process_events.py  rank_events.py  save_to_mongodb.py  tavily_search.py
src/: __init__.py  db.py  db_manager.py  models.py
src/llm/: __init__.py  judge.py  processor.py  ranker.py
src/pipeline/: __init__.py  crypto_event_pipeline.py  ranking_pipeline.py  utils.py
src/search/: __init__.py  exa.py  tavily.py
tests/: test_async_llm.py
